--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
+quarkus.http.root-path=/auth
 quarkus.http.port=80
 
 quarkus.swagger-ui.always-include=true
-quarkus.swagger-ui.path=/doc
+quarkus.swagger-ui.path=/auth
 
 quarkus.datasource.db-kind=mssql
 quarkus.datasource.username=sa
